More changes done